--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity
             android:name=".MainActivity2"
+            android:theme="@style/MyTheme"
             android:label="@string/title_activity_main_activity2" >
         </activity>
     </application>
