--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppThemeTranslucent" >
+        android:theme="@style/NoAnimationTheme" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -19,7 +19,7 @@
         </activity>
         <activity
             android:name=".MainActivity2"
-            android:theme="@style/MyTheme"
+            android:theme="@style/AppThemeTranslucent"
             android:label="@string/title_activity_main_activity2" >
         </activity>
     </application>
