--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         </activity>
         <activity
             android:name=".MainActivity2"
-            android:theme="@style/AppThemeTranslucent"
+            android:theme="@style/TranslucentTheme"
             android:label="@string/title_activity_main_activity2" >
         </activity>
     </application>
